main theme changes

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -5,3 +5,14 @@ $BLUE: #0490BB;
 $GOLD: #D6AF26;
 $CREAM: #FFFBEF;
 $GREEN: #5D886B;
+
+$LIGHTPURPLE: #9E6993;
+$DARKPURPLE: #653554;
+$DARKWHITE: #FEFFF5;
+$LIGHTGREEN: #69B7AE;
+$MIDGREEN: #09665B;
+$DARKGREEN: #00473E;
+$LIGHTPINK: #E9A4B6;
+$DARKPINK: #D26B89;
+$LIGHTYELLOW: #F0CA78;
+$DARKYELLOW: #F0B54F;
