--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -38,7 +38,8 @@
 html,
 body {
   font-family: 'Poppins' !important;
-  background-color: #FFFBEF;
+  /* background-color: #FFFBEF; */
+  background-image: linear-gradient(#3c2137, #f4d2d9);
 }
 
 h1,
@@ -76,3 +77,37 @@ h4 {
     }
 }
 
+.header-container {
+  position: relative;
+  text-align: center;
+  padding-bottom: 7cqh;
+}
+
+.header-container h1 {
+  position: relative;
+  padding-top: 4cqh;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  font-size: 4.5vw;
+  color: #653554;
+  z-index: 1;
+}
+
+.header-container::before {
+  content: '';
+  position: absolute;
+  left: 50%; /* Centers the image */
+  transform: translateX(-50%);
+  width: 100vw; /* Ensures the image spans the full viewport width */
+  height: 100%;
+  background-image: url('assets/TechniHeader.png');
+  background-size: contain; /* Ensures the full image is always shown */
+  background-position: center;
+  background-repeat: no-repeat; /* Prevents repeating if the image is smaller than the container */
+  z-index: 0;
+}
+
+.container {
+  padding-bottom: 7cqh;
+}
+/* #653564 */
