thievery and retheming please work

--- a/assets/styles/_schedule.scss
+++ b/assets/styles/_schedule.scss
@@ -1,22 +1,22 @@
 @import '_variables';
 
-$COLOR_PRIMARY: $CREAM;
-$COLOR_HEADER: $DARK_PURPLE;
-$COLOR_FOREGROUND: rgba($DARK_PURPLE, 50%);
-$COLOR_BORDER: rgba($CREAM, 30%);
-$COLOR_LIGHT_TEXT: $CREAM;
+$COLOR_PRIMARY: $DARKPURPLE;
+$COLOR_HEADER: $LIGHTYELLOW;
+$COLOR_FOREGROUND: rgba($LIGHTYELLOW, 50%);
+$COLOR_BORDER: rgba($DARKPURPLE, 30%);
+$COLOR_LIGHT_TEXT: $DARKPURPLE;
 $COLOR_FAVORITE: $GOLD;
 $BORDER_RADIUS: 1rem;
 
-$COLOR_MAIN_EVENT: $PINK;
+$COLOR_MAIN_EVENT: $LIGHTPURPLE;
 $COLOR_MAIN_EVENT_BORDER: darken($COLOR_MAIN_EVENT, 30%);
-$COLOR_WORKSHOP: $BLUE;
-$COLOR_WORKSHOP_BORDER: darken($BLUE, 15%);
-$COLOR_MINI_EVENT: $LIGHT_PURPLE;
+$COLOR_WORKSHOP: $LIGHTGREEN;
+$COLOR_WORKSHOP_BORDER: darken($COLOR_WORKSHOP, 15%);
+$COLOR_MINI_EVENT: $LIGHTPINK;
 $COLOR_MINI_EVENT_BORDER: darken($COLOR_MINI_EVENT, 15%);
-$COLOR_TECHNI_CHAT: $GOLD;
+$COLOR_TECHNI_CHAT: $DARKPURPLE;
 $COLOR_TECHNI_CHAT_BORDER: darken($COLOR_TECHNI_CHAT, 15%);
-$COLOR_FOOD: $DARK_PURPLE;
-$COLOR_FOOD_BORDER: darken($DARK_PURPLE, 30%);
-$COLOR_VIRTUAL: $GREEN;
-$COLOR_VIRTUAL_BORDER: darken($GREEN, 30%);
+$COLOR_FOOD: $DARKGREEN;
+$COLOR_FOOD_BORDER: darken($COLOR_FOOD, 30%);
+$COLOR_VIRTUAL: $DARKPINK;
+$COLOR_VIRTUAL_BORDER: darken($COLOR_VIRTUAL, 30%);
