--- a/assets/styles/_schedule.scss
+++ b/assets/styles/_schedule.scss
@@ -16,7 +16,7 @@ $COLOR_MINI_EVENT: $LIGHTPINK;
 $COLOR_MINI_EVENT_BORDER: darken($COLOR_MINI_EVENT, 15%);
 $COLOR_TECHNI_CHAT: $DARKPURPLE;
 $COLOR_TECHNI_CHAT_BORDER: darken($COLOR_TECHNI_CHAT, 15%);
-$COLOR_FOOD: $DARKGREEN;
+$COLOR_FOOD: $LIGHTBLUE;
 $COLOR_FOOD_BORDER: darken($COLOR_FOOD, 30%);
 $COLOR_VIRTUAL: $DARKPINK;
 $COLOR_VIRTUAL_BORDER: darken($COLOR_VIRTUAL, 30%);
